--- a/donate.html
+++ b/donate.html
@@ -29,7 +29,7 @@
 
   <!------------------------- CUSTOM BLOCK ------------------------>
   <section class="height-100 bg-white p-3">
-    <img src="assets/img/header-17.jpg" alt="Image" class="bg-image opacity-10">
+    <!-- <img src="#" alt="Image" class="bg-image opacity-10"> -->
     <div class="container">
       <div class="row justify-content-center">
         <div class="col-xl-11 col-lg-12">
@@ -263,7 +263,9 @@
 
       </div>
       <!-- Modal end -->
-      <div style="text-align: center;"><a href="index.html" class="btn btn-primary margin-20">Go back home</a></div>
+      <div style="text-align: center;">
+        <a href="index.html" class="btn btn-primary margin-20">Go back home</a>
+      </div>
     </div>
   </section>
 
