--- a/peeps-story.html
+++ b/peeps-story.html
@@ -279,6 +279,88 @@
 
       </div>
     </section>
+    <!------------- Story block start------------>
+    <section>
+      <div class="container">
+        <div class="row justify-content-center">
+          <div class="col-xl-8 col-lg-9">
+            <article>
+              <p>
+                Peeps is the creation of Jared Rice Sr., and has a story like no other tech company in existence. It is important for one to understand why this vision was created, where it came to fruition and how Peeps would finally arise from the ashes.
+              </p>
+              <h3>The beginnings.</h3>
+              <p>
+                Before the project was known as Peeps, it was another project promoted to millions of people around the world under the name "Arise Bank," which was originally bootstrapped by the efforts of Jared Rice Sr. and Stanley Ford. Rice's vision was to create a decentralized banking system around cryptocurrencies like Bitcoin where users of the system could be their own bank. He publicly denounced the Federal Reserve Bank for their hidden taxation of hard-working Americans through their printing of what he referred to as the "worthless" fiat-based U.S. Dollar. Little did he know however, that those at the Federal Reserve Bank, as well as its federal and state-based partner agencies - the Securities and Exchange Commission (SEC) and Texas Department of Banking, respectively - were conducting a campaign to frame Rice as a fraud. In any event, looking back at Rice's motivations at the the time, him knowing about the campaign would've done little to slow him down.
+              </p>
+              <p>
+                At this time, the development of AriseBank was long from being finished but there had been a great amount of work put into the project (still online at github.com/arisebank) and Rice had secured endorsements from the likes of Evander Holyfield, Emmit Smith and many others in what Rice dubbed "The Fight Of The Century." In the weeks that followed, Rice sold a new cryptocurrency known as as "AriseCoin" to help fund the development of the AriseBank project, in the process raising millions of dollars from many in the crypto community in a short period of time.
+              </p>
+              <h3>The beast attacks.</h3>
+              <p>
+                On January 5th, 2018, after Rice had sold millions of dollars worth of AriseCoin, the Texas Department of Banking served Rice's attorneys a cease and desist letter demanding Rice remove the word "bank" from his literature, saying that many people were driving to Dallas looking for his bank and were unable to find a branch. Rice responded with a public letter refusing to remove the word "bank" and explained that AriseBank wasn't a traditional bank, rather it was just as the AriseBank's website stated: "the world's first decentralized cryptocurrency bank." Behind the scenes however, Rice knew that none of his contributors, who were mostly crypto-savvy, would be driving to Dallas looking for a crypto bank.
+              </p>
+              <p>Rice also explained in his letter that AriseBank was merely a concept, that it was never going to be owned or controlled by anyone and that it was never going to function like a traditional bank or be FDIC-insured. He wasn't hesistant to mention that our country's founders despised a central fiat-based banking system. He even went on to say that he was ready to march on Austin, Texas and protest the highly fraudulent banking system that the Texas Department of Banking was protecting and shielding from a decentralized alternative. Rice believed it was his right to build a better banking system and it was those words that prompted federal and state authorities to conspire against Rice. At the same time, the SEC was busy trying to convince the courts that cryptocurrencies were in fact investments (like stocks) and not currencies.</p>
+              <h3>The setup.</h3>
+              <p>Over the course of the next few weeks, Rice was approached by a man who told him that he could purchase an FDIC-insured bank from some friends of his, in exchange for cryptocurrency. The man, known in federal documents as "E.T.," explained to Rice that it would allow him to legally use the word "bank." E.T. also introduced Rice to a PR firm that he claimed could promote the purchase of the FDIC bank to a global audience. Rice took the bait and sent the initial down payment in cryptocurrency to a man named Kurt Matthews to begin the acquisition of KFMC Bank. Matthews assured Rice that KFMC was indeed FDIC insured. Rice requested that Matthews provide a signed letter to his community of contributors stating that KFMC was FDIC-insured and Matthews sent the email to Rice from his "harvard.edu" email address. Days later, Matthews gave Rice permission to speak about the pending acquisition and shortly after the new PR firm sent ouf the first press announcing the purchase.</p>
+              <p>
+                Rice noticed the morning of the release that there were many errors, such as AriseBank being called an FDIC-insured bank, a quote from Rice stating that AriseBank offered FDIC-insured accounts and that AriseBank held 100% of the equity in KFMC Bank. Rice immediately contacted the PR firm and forced them to issue a correction which was released 48 hours later. The correction made clear, just as Rice's public letter to the Texas Department of Banking had made clear, that AriseBank was simply a decentralized cryptocurrency banking software, that it wasn't owned by anyone, would never be FDIC-insured and would never offer FDIC-insured accounts. Rice also stated that they were only in the process of acquiring an FDIC-insured bank, did not hold 100% equity in the bank and the acquisition had nothing to do with the AriseBank software. During all of this, while Rice was busy offering refunds to his community of contributors, little did he know that the federal and state agencies conspiring against him had alrady set the wheels in motion for his eventual downfall.
+              </p>
+              <h3>The raid.</h3>
+              <p>
+                On January 25, 2018, under seal in the Northern District of Texas, the SEC filed a lawsuit against AriseBank, Rice and Ford (SEC v. AriseBank) in which the SEC accused Rice of selling unregistered securities and making misleading statements to "investors." The following morning, Rice was raided by what he described as "an armed militia," made up of members of the FBI, SEC and DOJ, carrying automatic firewarms and crowd control shields. Agents made clear that the bank Rice was in the process of acquiring was not FDIC-insured and regardless of his knowledge of that fact or his intentions, he had misled investors.
+              </p>
+              <p>
+                The government asked Rice to cooperate and hand over the many cryptocurrency wallets that held the Bitcoin, Litecoin, Ethereum and BitShares Rice had raised in exchange for AriseCoin. Rice agreed to provide the keys to the accounts. Hours later, Rice and some of the AriseBank team were left stranded without a car, deep in the country without phones, money, or food on a cold January night. By the grace of God, Rice's Uber driver came back looking for him and was able to provide Rice and his team a ride back to Dallas, where he vowed to make a comeback and fight the allegations against him.
+              </p>
+              <h3>The comeback.</h3>
+              <p>
+                Upon his return to Dallas, Rice found himself all over the national media portrayed as a "fraud." Most of his work on AriseBank had been taken offline as if it had never existed and a custody battle was ensuing over his youngest son. Later that night, Rice appeared on Coast-To-Coast, a nationally syndicated radio talk show, and defiantly stated, "they can take my personal belongings, my reputation and even my kids, but they'll never take my vision." This statement created a growing movement around Rice that became known as the "Arisen Army." He publicly vowed that as long as he remained a free man, he'd find a way to rebuild AriseBank so that it would never be seized or removed from the web again.
+              </p>
+              <h3>The birth of Arisen and the dWeb.</h3>
+              <p>
+                For the next 10 months, Rice worked from his parents home, most of it in 72 hour sessions without a single minute of sleep, researching and developing ways to create a truly decentralized web. After 9 months of research and development, Rice announced the launch of the "Arisen" network software development framework and "dweb://" protocol. Together, these systems formed what Rice called the world's first truly decentralized web and platform for developing truly decentralized applications.
+              </p>
+              <p>
+                In an early whitepaper about Arisen and dWeb, Rice acknowledged that AriseBank, due to its ability to be seized and taken offline, was not truly decentralized and that there were many things he had wrong in his original plans. Rice explained that once Arisen and dWeb were launched, that a truly decentralized banking platform, along with many other decentralized systems, could be developed and disrupt nearly every industry in existence. Rice went back to the original AriseBank chat room, where all of the original contributors hung around for Rice's daily updates, and announced that the dWeb and Arisen would launch the following day. Little did he know, the FBI and DOJ were still following these chatrooms. The next morning as Rice was checking in with his probation officer, he was arrested by FBI agents and the launch of Arisen and dWeb were postponted indefinetely.
+              </p>
+              <h3>The indictment and bond denial.</h3>
+              <p>
+                Rice was subsequently indicted on six counts of securities fraud. Prosecutors argued that he was a danger to society and as a result, he was held without bond. Despite Rice's knowledge, he was being indicted for weeks. And even though he was unable to drive a motor vehicle and his passport had been suspended earlier in the year by a federal judge, he was still deemed a flight risk. It didn't help that the prosecutor and FBI told the judge they believed Rice had "millions of dollars" hidden - false information they obtained from the mother of his child who at the time was vying for custody of his son. Regardless of Rice's attorney pointing out many holes in the false statements of the prosecutor and FBI, Rice was held without bond and sent to a federal holding facility.
+              </p>
+              <h3>The plea agreement.</h3>
+              <p>
+                Weeks before the raid and nearly eleven months before the indictment and arrest of Rice, a secret Governance was established around his work. The Governance was made up of 21 witnesses, many of who were prominent BitShares community members. The Governance would ultimately be entrusted with carrying on Rice's work in the event he was incarcerated or incapable of carrying on with the projects.
+              </p>
+              <p>
+                The Arisen and dWeb softwares were immediately placed under the protection of the Governance and safeguarded by its members until plans could be made around their continued development and launch. From behind bars, Rice continued preaching the importance of decentralization to the community from a segregated jail cell: a cell he found himself in after threats were made on his life by another inmate. As the debate on how to push forward with Rice's work continued, he was busy writing code on notebook paper and continuing on with development, even without access to a computer.
+              </p>
+              <p>
+                Due to the 120 year sentence Rice was facing and the threat from prosecutors that they would tack on an additional 100 years if he didn't plead guilty, he decied to take a five year plea agreement. Rice's lawyers told him that in the federal system, if he plead guilty, he would be moved from the inhumane conditions of the county jail to a federal detention center where conditions were much better and where he could physically touch his family durint visitation. Rice's lawyers assured him that even though he had corrected the press release and that his intent to deliver could easily be proven to anyone with a brain, that in federal cases, the government could argue to keep specific evidence out and that because of this they had a 99% conviction rate. Rice simply wanted to live to fight another day and in the end, he agreed to plea guilty.
+              </p>
+              <h3>Coding behind bars.</h3>
+              <p>
+                Members of the community assisted Rice in sending printed version of various dWeb and Arisen software libraries, screenshots of where he had left off on certain projects, books on programming languages that had been recently updated and even newly released programming standards so that Rice could begin the daunting task of updating dWeb and Arisen's software. Rice teamed with Indian programmer Shikhar Srivastava and his team of programmers to re-develop Arisen, dWeb and a new rendition of AriseBank. For months, Rice wrote thousands of pages of code, authored six whitepapers and refined his vision for a company that would come to be known as "Peeps." With nothing but a text box to type in, Rice sent emails to Srivastava over the DOJ's messaging system. In fact, Rice spent most of his days writing in his cell and walking to the computer lab to send what he had written to Srivastava.
+              </p>
+              <h3>The pandemic.</h3>
+              <p>
+                As Rice was readying the launch of Peeps, the COVID-19 pandemic hit the United States and the Bureau of Prisons. Inmates were locked down to their cells and only allowed a small amount of time to make phone calls, send emails and take a shower. Rice elected to take a shower in his sink for months and instead used the precious time out of his cell to type and send instructions to Srivastava. Despite the restrictions, Rice and Srivastava were able to successfully release Arisen and the dWeb's key infrastructure on July 4th, 2020, ultimately launching the world's first truly decentralized web.
+              </p>
+              <h3>Our mission.</h3>
+              <p>
+                Peeps, as a company, overcame huge obstacles in the process of bringing their vision to the world. In the end, all Rice cared about was that his vision was brought to life and that this work, perseverance and sacrifices would provide a foundation that he and other developers could build upon for years to come. His efforts are now being realized by many developers like Srivastava and a team is growing around his vision to decentralize the world.
+              </p>
+              <p>
+                Rice's mission to provide freedom to others, even while his own freedom has been taken, serves as an example of the many sacrifices Peeps developers make on a daily basis to bring freedom back to the Internet. AriseCoin is now known as RISE (RIX) and this time is being given away for free to people around the world rather than being sold. As a result, RIX has become an instrumental tool in developing a decentralized economy around the Peeps ecosystem and apps like PeerOS, dWallet, dSocial, dRide, dBuy and many others. At Peeps "decentralize everything" is not just a slogan - it's their way of life and one they will strive to achieve regardless of the obstacles in their way. It's simply a part of their DNA.
+              </p>
+              
+              
+            </article>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!------------ Story block end---------------->
 <!------------------------- SUPPORT DEVELOPMENT BLOCK Start------------------------>
 <section class="pt-md-4 pb-md-0" id="support">
     <div class="container">
