--- a/peeps-story.html
+++ b/peeps-story.html
@@ -271,7 +271,7 @@
               <div class="card-body py-4">
                 <span class="d-block h1 display-4">6</span>
                 <p>The amount of scientific whitepapers authored by Jared Rice Sr. from behind bars.</p>
-                <a href="#Medium Launch Post">Read The Launch Post</a>
+                <a href="https://medium.com/@peepsology">Read The Launch Post</a>
               </div>
             </div>
           </div>
