--- a/welcome.html
+++ b/welcome.html
@@ -33,7 +33,7 @@
               <div class="card-body">
                 <div class="icon-rounded bg-success mx-auto mb-3"><i class="material-icons text-white">check</i></div>
                 <h1 class="h2 mb-3 text-center">Welcome, Patriot.</h1>
-                <p class="lead">Thank you for becoming a member of our Patriots Club and helping support our mission to create a better Internet for everyday. Check your email for our "Welcome email.</p>
+                <p class="lead">Thank you for becoming a member of our Patriots Club and helping support our mission to create a better Internet for everyday. Check your email for our "Welcome email".</p>
                 <a href="index.html">Go back home</a>
               </div>
             </div>
