--- a/dsearch.html
+++ b/dsearch.html
@@ -206,6 +206,38 @@
             </div> -->
           </div>
         </li>
+
+        <li class="dropdown">
+          <a class="nav-link h5 dropdown-toggle" href="#" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" id="components-dropdown">About Peeps</a>
+          <div class="dropdown-menu dropdown-menu-wide p-0 o-hidden dropdown-menu-right" aria-labelledby="components-dropdown">
+            <div class="list-group list-group-flush">
+              
+              <a href="our-team.html" class="list-group-item list-group-item-action d-flex justify-content-between align-items-center py-3">
+                <div class="d-flex align-items-center">
+                  <div class="icon-rounded mr-3" style="border: 1px solid #000;">
+                    <span>OT</span>
+                  </div>
+                  <div>
+                    <span class="h6 d-block mb-0">Our Team</span>
+                  </div>
+                </div>
+                <i class="material-icons">keyboard_arrow_right</i>
+              </a>
+              <a href="peeps-story.html" class="list-group-item list-group-item-action d-flex justify-content-between align-items-center py-3">
+                <div class="d-flex align-items-center">
+                  <div class="icon-rounded mr-3" style="border: 1px solid #000;">
+                    <span>OT</span>
+                  </div>
+                  <div>
+                    <span class="h6 d-block mb-0">The Peeps Story</span>
+                  </div>
+                </div>
+                <i class="material-icons">keyboard_arrow_right</i>
+              </a>
+            </div>
+          </div>
+        </li>
+
         <li class="nav-item">
           <a class="nav-link h5" href="fund.html">Support Us</a>
         </li>
@@ -380,7 +412,7 @@
             <ul class="list-unstyled">
               <li class="py-0 py-md-1"><a href="peepsid.html" class="text-gray">PeepsID</a></li>
               <li class="py-0 py-md-1"><a href="peeros.html" class="text-gray">PeerOS</a></li>
-              <li class="py-0 py-md-1"><a href="dbrowser.html" class="text-gray">ddBrowser</a></li>
+              <li class="py-0 py-md-1"><a href="dbrowser.html" class="text-gray">dBrowser</a></li>
             </ul>
 
           </div>
