--- a/dnames.html
+++ b/dnames.html
@@ -335,7 +335,7 @@
         <div class="col-xl-8 col-lg-8 col-md-8 center-text">
             <div class="">
                 <h1 class="display-4">and you're in control.</h1>
-                <p class="description">The only way you can lose your domain is if you relinquish the cryptographic keys related to the domain and whether you do that or not is COMPLETELY up to you - because only you can control and make decisions concerning your domain names</p>
+                <p class="description">The only way you can lose your domain is if you relinquish the cryptographic keys related to the domain and whether you do that or not is COMPLETELY up to you - because only you can control and make decisions concerning your domain names.</p>
                 <a href="#manage-domains"><i class="material-icons d-block down-arrow arrow bounce">keyboard_arrow_down</i></a>
               </div>
         </div>
@@ -351,7 +351,7 @@
         <div class="col-xl-8 col-lg-8 col-md-8 center-text">
             <div class="">
                 <h1 class="display-4">easily manage them too.</h1>
-                <p class="description">dNames allows your to manage the dDNS records for your domains via dBrowser, MacOS, Windows and Linux, free of charge. It doesn't get any easier or better than that.</p>
+                <p class="description">dNames allows you to manage the dDNS records for your domains via dBrowser, MacOS, Windows and Linux, free of charge. It doesn't get any easier or better than that.</p>
                 
               </div>
         </div>
