--- a/dsocial.html
+++ b/dsocial.html
@@ -260,7 +260,7 @@
                     <img src="assets/img/logo/dsocial.png" alt="dsocial">
                 </div>
                 <h1 class="display-4 text-white font-alt-1 text-center mt-2">Here Is Your Voice Back.</h1>
-                <p class="description" style="color: #fff;">dSocial is the world's first truly decentralized and censorship-resistant social network, where users own their data and earn for the data they curate. Reserve your username now and get your voice back.</p>
+                <p class="description" style="color: #fff;">dSocial is the world's first truly decentralized and censorship-resistant social network, where users own their data and earn for the data they curate. Reserve your username now and take your voice back.</p>
                 <div class="text-center">
                   <a href="https://signup.dsocial.network/welcome" class="btn btn-lg btn-white">Join The Social Revolution</a>
                   <a href="https://github.com/peepsx/dsocial-whitepaper" class="btn btn-lg btn-white">Read Whitepaper</a>
@@ -313,7 +313,7 @@
         <div class="col-xl-8 col-lg-8 col-md-8 center-text">
             <div class="">
                 <h1 class="display-4">plus, you earn some money.</h1>
-                <p class="description">Friends upvote each other's posts and comments with various cryptocurrencies like RIX and LIKE so that users can earn for their interactions with the network.</p>
+                <p class="description">Friends upvote each other's posts and comments with various cryptocurrencies like RIX and LIKE so that users can earn for their interactions with others on the network.</p>
                 <a href="#countdown"><i class="material-icons d-block down-arrow arrow bounce">keyboard_arrow_down</i></a>
               </div>
         </div>
