--- a/index.html
+++ b/index.html
@@ -303,7 +303,7 @@
     <div class="row justify-content-center">
       <div class="col-xl-8 col-lg-8 col-md-8 center-text">
           <div class="">
-            <div class="logo-rounded ">
+            <div class="logo-rounded" style="box-shadow: 5px 5px 10px #888888;">
               <img src="assets/img/logo/dbrowser.png" alt="dbrowser">
             </div>
             <h1 class="display-4 text-white font-alt-1 text-center mt-2" style="color:rgb(0,0,0) !important">Experience The Open Web.</h1>
@@ -345,7 +345,7 @@
     <div class="row justify-content-center">
       <div class="col-xl-8 col-lg-8 col-md-8 center-text">
           <div class="">
-            <div class="logo-rounded ">
+            <div class="logo-rounded" style="box-shadow: 5px 5px 10px #888888;">
               <img src="assets/img/logo/dwallet.png" alt="dwallet">
             </div>
             <h1 class="display-4 text-white font-alt-1 text-center mt-2" style="color:rgb(0,0,0) !important">Better Than A Bank.</h1>
