--- a/join.html
+++ b/join.html
@@ -124,7 +124,7 @@
         <div class="modal-content">
             <div class="modal-header">
                 <!-- <button type="button" class="close" data-dismiss="modal">&times;</button> -->
-                <h4 class="modal-title">Subscribe to Stripe Payment</h4>
+                <h4 class="modal-title">Enter Your Card Details.</h4>
             </div>
             <div class="modal-body">
                 <form class="stripeform">
@@ -137,7 +137,7 @@
                         <div id="card-element" class="field"></div>
                     </label>
                     <div class="pay-btn">
-                      <button type="submit" class="btn btn-sm btn-blue">Pay$5</button>
+                      <button type="submit" class="btn btn-sm btn-blue">Subscribe Monthly</button>
                       <button type="button" class="btn btn-sm btn-blue" data-dismiss="modal">Close</button>
                       </div>
                     <div class="outcome">
