--- a/our-team.html
+++ b/our-team.html
@@ -321,7 +321,7 @@
           </div>
           <div class="col-6 col-md-4 col-xl-3 d-flex">
             <div class="card">
-              <img class="card-img-top team-image" src="assets/img/team/michael.jpg" alt="Michael Taggart">
+              <img class="card-img-top team-image" src="assets/img/team/Michael taggart.jpg" alt="Michael Taggart">
               <div class="card-body py-3">
                 <h5 class="mb-0">Michael Taggart</h5>
                 <span>Chief Evangelist</span>
@@ -333,7 +333,7 @@
           </div>
           <div class="col-6 col-md-4 col-xl-3 d-flex">
             <div class="card">
-              <img class="card-img-top team-image" src="assets/img/team/Ashutosh-Singh.jpg" alt="Ashutosh Singh">
+              <img class="card-img-top team-image" src="assets/img/team/asutosh.png" alt="Ashutosh Singh">
               <div class="card-body py-3">
                 <h5 class="mb-0">Ashutosh Singh</h5>
                 <span>Developer</span>
