--- a/dwallet.html
+++ b/dwallet.html
@@ -504,11 +504,11 @@
         
         let txt = document.getElementById('os_download');
             if(txt.innerHTML.indexOf('Linux') !== -1) {
-                txt.href = 'https://github.com/ArisenIO/dWallet-desktop/releases/download/1.1.3/linux-dWallet-1.1.3-x86_64.AppImage'
+                txt.href = 'https://github.com/ArisenIO/dWallet-desktop/releases/download/1.1.4/linux-dWallet-1.1.4-x86_64.AppImage'
             } else if(txt.innerHTML.indexOf('Mac') !== -1) {
-                txt.href = 'https://github.com/ArisenIO/dWallet-desktop/releases/download/1.1.3/dWallet.app.zip'
+                txt.href = 'https://github.com/ArisenIO/dWallet-desktop/releases/download/1.1.4/mac-dWallet-1.1.4.dmg'
             } else  if(txt.innerHTML.indexOf('Win') !== -1) {
-                txt.href = 'https://github.com/ArisenIO/dWallet-desktop/releases/download/1.1.3/win-dWallet-1.1.3.exe'
+                txt.href = 'https://github.com/ArisenIO/dWallet-desktop/releases/download/1.1.4/win-dWallet-1.1.4.exe'
             }
             else{
                 txt.href = "#"
