--- a/peeps-story.html
+++ b/peeps-story.html
@@ -294,9 +294,9 @@
           <div class="col-lg-4 d-lg-flex">
             <div class="card">
               <div class="card-body py-4">
-                <span class="d-block h1 display-4">2,000</span>
-                <p>The amount of signatures needed on the position to free Jared Rice Sr.</p>
-                <a href="https://petition.peepsx.com">Sign The Petition</a>
+                <span class="d-block h1 display-4">22</span>
+                <p>The amount of months Jared Rice Sr. has been incarcerated.</p>
+                <!-- <a href="https://petition.peepsx.com">Sign The Petition</a> -->
               </div>
             </div>
           </div>
@@ -305,7 +305,7 @@
               <div class="card-body py-4">
                 <span class="d-block h1 display-4">6</span>
                 <p>The amount of scientific whitepapers authored by Jared Rice Sr. from behind bars.</p>
-                <a href="https://medium.com/@peepsology">Read The Launch Post</a>
+                <a href="https://github.com/peepsx/dsocial-whitepaper">Read one</a>
               </div>
             </div>
           </div>
@@ -319,9 +319,10 @@
         <div class="row justify-content-center">
           <div class="col-xl-8 col-lg-9">
             <article>
-              <p>
+              <h3>Launching 08/24/20</h3>.
+              <!-- <p>
                 Peeps is the creation of Jared Rice Sr., and has a story like no other tech company in existence. It is important for one to understand why this vision was created, where it came to fruition and how Peeps would finally arise from the ashes.
-              </p>
+              </p> -->
               <h3>The beginnings.</h3>
               <p>
                 Before the project was known as Peeps, it was another project promoted to millions of people around the world under the name "Arise Bank," which was originally bootstrapped by the efforts of Jared Rice Sr. and Stanley Ford. Rice's vision was to create a decentralized banking system around cryptocurrencies like Bitcoin where users of the system could be their own bank. He publicly denounced the Federal Reserve Bank for their hidden taxation of hard-working Americans through their printing of what he referred to as the "worthless" fiat-based U.S. Dollar. Little did he know however, that those at the Federal Reserve Bank, as well as its federal and state-based partner agencies - the Securities and Exchange Commission (SEC) and Texas Department of Banking, respectively - were conducting a campaign to frame Rice as a fraud. In any event, looking back at Rice's motivations at the the time, him knowing about the campaign would've done little to slow him down.
