--- a/dwallet.html
+++ b/dwallet.html
@@ -51,7 +51,7 @@
               <a href="https://docs.arisen.network" class="nav-link pr-2">Docs</a>
             </li>
             <li class="nav-item rix-price-box">
-              <a href="https://wallet.bitshares.org/#/asset/RSN" target="_blank" class="nav-link pr-2">RIX Price: <span id="rix-price" class="rsn-price badge badge-success"></span>
+              <a href="https://wallet.bitshares.org/#/asset/RSN" target="_blank" class="nav-link pr-2">RIX Value: <span id="rix-price" class="rsn-price badge badge-success"></span>
 </a>
             </li>
           </ul>
@@ -385,9 +385,10 @@
         <div class="row">
           <div class="col-6 col-md-5 mb-3 mb-md-0">
             <img src="assets/img/logo/peepsLogo.png" alt="peeps-logo" class="footer-logo">
-            <p class="trademark">decentralize everything. &trade;</p>
+            <!-- <p class="trademark">decentralize everything. &trade;</p> -->
             <hr/>
-            <p>"They can take my personal belongings, my reputation, and even my kids, but they'll never take my vision."<br/><b>- Jared Rice Sr.</b><br/>CEO, Peeps</p>
+            <p>"My bias was always to build decentralization into the net. That way it would be hard for one group to gain control. I didn't trust large central organizations. It was just in my nature to distrust them."<br />
+              <b>- Bob Taylor</b><br />Visionary of ARPANET & Godfather Of The Internet</p>
             <hr/>
             <p class="powered-by">
               Powered by <a href="https://peepsx.com" target="_blank"><img src="assets/img/logo/arisen.png" alt="peeps-logo"></a> and Made in <img src="assets/img/flag-us.svg" alt="United States" class="btn-image">
