--- a/fund.html
+++ b/fund.html
@@ -54,7 +54,7 @@
               <a href="https://docs.arisen.network" class="nav-link pr-2">Docs</a>
             </li>
             <li class="nav-item rix-price-box">
-              <a href="https://wallet.bitshares.org/#/asset/RSN" target="_blank" class="nav-link pr-2">RIX Price: <span id="rix-price" class="rsn-price badge badge-success"></span>
+              <a href="https://wallet.bitshares.org/#/asset/RSN" target="_blank" class="nav-link pr-2">RIX Value: <span id="rix-price" class="rsn-price badge badge-success"></span>
 </a>
             </li>
           </ul>
@@ -276,7 +276,7 @@
             <div class="card-body py-4">
               <span class="d-block h1 display-4">32</span>
               <p>The number of developers, visionaries and advisors on our growing team at Peeps.</p>
-              <a href="our-team.html">Meet our team</a>
+              <a href="our-team.html">Meet some of our team</a>
             </div>
           </div>
         </div>
@@ -284,7 +284,7 @@
           <div class="card shadow-lg">
             <div class="card-body py-4">
               <span class="d-block h1 display-4">$100,000+</span>
-              <p>The amount of money sent from contributors in the form of donations, domain payments, developer payments and more.</p>
+              <p>The amount of money we have spent on domains, servers, developers and more over the past 12 months, thanks to our growing number of supporters.</p>
               <a href="donate.html">Donate now</a>
             </div>
           </div>
@@ -305,19 +305,19 @@
 
   <!------------------------- CTA Block End------------------------>
   <!------------------------- CONTENT BLOCK 1 TEMPLATE Start (#support-is-growing)------------------------>
-  <section class="height-100 bg-white" id="support-is-growing">
+  <!-- <section class="height-100 bg-white" id="support-is-growing">
     <div class="container">
       <div class="row justify-content-center">
         <div class="col-xl-8 col-lg-8 col-md-8 center-text">
           <div class="">
             <h1 class="display-4">our support is growing.</h1>
-            <!-- <div class="progress" style="height: 50px;"> -->
-            <!-- <div class="progress-bar" role="progressbar" style="width: 25%;" aria-valuenow="10" aria-valuemin="0" aria-valuemax="100000">
+            <div class="progress" style="height: 50px;">
+            <div class="progress-bar" role="progressbar" style="width: 25%;" aria-valuenow="10" aria-valuemin="0" aria-valuemax="100000">
                     <div class="d-flex justify-content-between">
                       <span>10%</span>
                     </div>
-                  </div> -->
-            <!-- </div> -->
+                  </div>
+            </div>
             <div id="myProgress">
               <div id="myBar">10%</div>
             </div>
@@ -328,7 +328,7 @@
         </div>
       </div>
     </div>
-  </section>
+  </section> -->
 
   <!------------------------- CONTENT BLOCK 1 TEMPLATE End------------------------>
   <!------------------------- CONTENT BLOCK 2 TEMPLATE Start (#become-a-member)------------------------>
@@ -381,10 +381,10 @@
       <div class="row">
         <div class="col-6 col-md-5 mb-3 mb-md-0">
           <img src="assets/img/logo/peepsLogo.png" alt="peeps-logo" class="footer-logo">
-          <p class="trademark">decentralize everything. &trade;</p>
+          <!-- <p class="trademark">decentralize everything. &trade;</p> -->
           <hr />
-          <p>"They can take my personal belongings, my reputation, and even my kids, but they'll never take my
-            vision."<br /><b>- Jared Rice Sr.</b><br />CEO, Peeps</p>
+          <p>"My bias was always to build decentralization into the net. That way it would be hard for one group to gain control. I didn't trust large central organizations. It was just in my nature to distrust them."<br />
+            <b>- Bob Taylor</b><br />Visionary of ARPANET & Godfather Of The Internet</p>
           <hr />
           <p class="powered-by">
             Powered by <a href="https://peepsx.com" target="_blank"><img src="assets/img/logo/arisen.png"
