--- a/donate.html
+++ b/donate.html
@@ -197,8 +197,8 @@
                   <div class="flex-container payment-optn">
                     <div id="paypal-button-container"></div>
 
-                    <button type="button" class="btn btn-primary btn-blue" data-toggle="modal"
-                      data-target="#myModal">Pay With Card</button>
+                    <!-- <button type="button" class="btn btn-primary btn-blue" data-toggle="modal"
+                      data-target="#myModal">Pay With Card</button> -->
 
                   </div>
                   <!-- <button class="btn btn-primary margin-20" type="button" onclick="thirdNextButton()">Next Step</button> -->
