--- a/join.html
+++ b/join.html
@@ -103,8 +103,8 @@
                 <div class="flex-container payment-optn">
                       <div id="paypal-button-container"></div>
 
-                      <button type="button" class="btn btn-primary btn-blue" data-toggle="modal"
-                        data-target="#myModal">Pay With Card</button>
+                      <!-- <button type="button" class="btn btn-primary btn-blue" data-toggle="modal"
+                        data-target="#myModal">Pay With Card</button> -->
 
               </div>
             </div>
